Add DP references cell.

--- a/tutorials/dynamic-programming.ipynb
+++ b/tutorials/dynamic-programming.ipynb
@@ -59,6 +59,17 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "# DP references\n",
+    "\n",
+    "- Dynamic Programming - From Novice to Advanced, by Dumitru topcoder member ([link][dumitru-topcoder])\n",
+    "\n",
+    "[dumitru-topcoder]:https://www.topcoder.com/community/data-science/data-science-tutorials/dynamic-programming-from-novice-to-advanced/"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "# Monge arrays\n",
     "\n",
     "Have a look at https://en.wikipedia.org/wiki/Monge_array"
